--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <div class="offcanvas-body">
               <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                 <li class="nav-item ">
-                    <a class="nav-link active text-white" aria-current="page" href="/index.html">Home</a>
+                    <a class="nav-link active text-white" aria-current="page" href="index.html">Home</a>
                 </li>
                 <li class="nav-item ">
                     <a class="nav-link text-white" href="/contact.html">Contact Us</a>
